# tictactapp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main_game.cpp  startDocker.sh  tictactapp.cpp
Board/: Board.cpp  Board.h  PythonBindings.cpp
notebooks/: POMDP-tests.ipynb  PythonLearning.ipynb
